fix(logo resizing): both logos were too big

--- a/pages/header-gallery/assets/css/style.css
+++ b/pages/header-gallery/assets/css/style.css
@@ -53,7 +53,7 @@ h1{
     .logo { /*design 2*/
         cursor: pointer;
         width: auto;
-        height: 10px;
+        height: 100px;
     }
 
     .nav_links li {
@@ -336,7 +336,7 @@ h1{
     .logo { /*design 2*/
         cursor: pointer;
         width: auto;
-        height: 10px;
+        height: 100px;
     }
 
     .nav_links li {
